fixed some spacing issues with the carrousel, and the speed of the animation, and fixed the button in responsive filling the full page (made it fit)

--- a/src/scss/component/_achievements.scss
+++ b/src/scss/component/_achievements.scss
@@ -1,7 +1,7 @@
 .carousel {
   position: relative;
   width: 100%;
-  overflow: hidden;
+  overflow: visible;
 
   .slides {
     display: flex;
