--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -22,6 +22,10 @@
   --foreground: #1F1F1F; // Use the actual color value from $neutral-900
 }
 
+.p-lg-5{
+  padding-top: 4rem;
+}
+
 // animations page
 .fade-in-section {
   opacity: 0;
@@ -45,7 +49,7 @@
 html,
 body {
   max-width: 100vw;
-  height: 100%;
+  min-height: fit-content;
   // background: linear-gradient(45deg, var(--background), var(--foreground)); // Use custom properties
   background: linear-gradient(180deg, #141212, #141212 9.25%, #1f1f1f 29%, #191818 62%, #141212 78%);
   color: var(--foreground);
@@ -64,7 +68,15 @@ body {
     color: inherit;
     text-decoration: none;
   }
+
+  .justify-content-center{
+    justify-content: center;
+    align-content: center;
+    place-content: center;
+  }
+
   .button {
+    width: fit-content;
     height: 100%;
     position: relative;
     border-radius: 72px;
@@ -111,6 +123,10 @@ body {
       background-color: $primary-600;
       /* Darker background on hover in primary state */
     }
+  }
+
+  .container-fluid{
+    margin-top: 4rem;
   }
   .text-gradient {
     background: linear-gradient(272deg, #635371 -14.22%, #EDEDF2 50.45%, #635371 116.9%);
